--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="Xc6b1WOyOUbAmA93d1Unk9jb_fsbj1Dgy6f6cA0yxRA" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Speed Test</title>
     <link rel="stylesheet" href="style.css" />
